[workspace]

members = ["client"]


[package]
name = "nexus-vft"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-vft-app = { path = "app" }
#parity-scale-codec = { version = "3.6", default-features = false }
#scale-info = { version = "2.10", default-features = false }

[build-dependencies]
nexus-vft-app = { path = "app" }
sails-rs = { version = "0.4.0", features = ["wasm-builder"] }
sails-idl-gen = "0.4.0"

[dev-dependencies]
gstd = "1.5.0"
nexus-vft = { path = ".", features = ["wasm-binary"] }
nexus-vft-client = { path = "client" }
sails-rs = { version = "0.4.0", features = ["gtest"] }
tokio = { version = "1.39", features = ["rt", "macros"] }

[features]
wasm-binary = []
