[package]
name = "nexus-vft-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = "1.5.0"
sails-rs = "0.4.0"
vft-service = { git = "https://github.com/gear-foundation/standards" }
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }